--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "pre-commit": "^1.1.3",
     "protractor": "^3.2.2",
     "run-sequence": "^1.2.2",
-    "wiredep": "^4.0.0"
+    "wiredep": "^4.0.0",
+    "angular-markdown-filter": "^1.3.2"
   },
   "scripts": {
     "postinstall": "bower install",
@@ -83,8 +84,6 @@
     }
   },
   "dependencies": {
-    "angular-markdown-filter": "^1.3.2",
-    "bower": "^1.7.9",
-    "node-sass": "^3.3.3"
+
   }
 }
